# st-app-test

./: app.py  pyproject.toml  requirements.txt
